# fluent

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude-plugin/: marketplace.json  plugin.json
.factory/: Dockerfile  config.toml  extract-tester-results  observations-resolved.md  observations.md  tester.yaml
.fluent/: Dockerfile  tester.yaml
.githooks/: pre-commit
documentation/: architecture.md  behaviors.md
expertise/: INDEX.md  README.md  architecture.md  behaviors.md  documentation.md  pdf.md  shell-scripts.md  skills.md  terminal-ui.md  tests.md  youtube.md
infrastructure/: cloudformation.yaml  setup.sh  teardown.sh
prompts/: author.md  behavior-tests.md  capture-system.md  capture-user.md  learner-system.md  learner-user.md  rebase-system.md  rebase-user.md  review-architecture.md  review-behaviors.md  review-documentation.md  review-only-system.md  review-only-user.md  review-skills.md  review-system.md  review-tests.md  review-user.md  seed-system.md  seed-user.md  work-author.md  work-rebase.md  write-system.md  write-user.md
sandboxes/: codex.sb  common.sb  pi.sb
scripts/: factory  release.sh
src/: agent.rs  atomic_write.rs  auto_merge.rs  behavior_tests.rs  checks.rs  claude_auth.rs  cleanup.rs  cli.rs  coder.rs  config.rs  content.rs  credential.rs  dashboard.rs  fargate.rs  fargate_bootstrap.rs  follow_up.rs  git.rs  guidance.rs  hooks.rs  keep_awake.rs  land.rs  land_lock.rs  learner.rs  lease.rs  lib.rs  lineage_lock.rs  main.rs  merge.rs  notify.rs  observations.rs  os.rs  parallel.rs  plan.rs  post_merge_review.rs  prep.rs  queue.rs  report.rs  review.rs  review_diff_command.rs  review_only_worktree.rs  (+18 more)
tests/: binary.rs  public_api.rs  test-run  test-skill  work_model_external.rs  work_model_storage_review_external.rs
(+409 files in other folders)
