[package]
name = "factory"
version = "0.1.0"
edition = "2024"
description = "Run coding agents inside a macOS Seatbelt sandbox with session continuity"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"
