[package]
name = "fluent"
version = "0.1.0"
edition = "2024"
description = "Run coding agents inside a macOS Seatbelt sandbox with session continuity"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"
unicode-width = "0.2"
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"
